force-app/main/default/objects/onemergefree__MergeJob__c/onemergefree__MergeJob__c.object-meta.xml
<CustomObject>
    <label>Merge Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>