force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__AsyncApexJobId__c</fullName>
    <description>Id of the related AsyncApexJob record for the Merge Job. View via Setup&gt;Environments&gt;Jobs&gt;Apex Jobs.</description>
    <inlineHelpText>Id of the related AsyncApexJob record for the Merge Job. View via Setup&gt;Environments&gt;Jobs&gt;Apex Jobs.</inlineHelpText>
    <label>AsyncApexJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>