force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__CronTriggerId__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__CronTriggerId__c</fullName>
    <description>Id of the related CronTrigger record for the Merge Job. View via Setup&gt;Environments&gt;Jobs&gt;Scheduled Jobs.</description>
    <inlineHelpText>Id of the related CronTrigger record for the Merge Job. View via Setup&gt;Environments&gt;Jobs&gt;Scheduled Jobs.</inlineHelpText>
    <label>CronTriggerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>