force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__EndDateTime__c</fullName>
    <description>Processing end time of the Merge Job.</description>
    <inlineHelpText>Processing end time of the Merge Job.</inlineHelpText>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>