force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__JobType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__JobType__c</fullName>
    <description>The type of the Merge Job.</description>
    <inlineHelpText>The type of the Merge Job.</inlineHelpText>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merge</fullName>
                <default>true</default>
                <label>Merge</label>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Reparenting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>