force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__MergeJobStatus__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeJobStatus__c</fullName>
    <description>Current status of the Merge Job.</description>
    <inlineHelpText>Current status of the Merge Job.</inlineHelpText>
    <label>Merge Job Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>