force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__NumMatchedRecords__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__NumMatchedRecords__c</fullName>
    <description>Number of Records matched.</description>
    <inlineHelpText>Number of Records matched.</inlineHelpText>
    <label>Number of Matched Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>