force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__NumMatchedRecordSets__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__NumMatchedRecordSets__c</fullName>
    <description>Number of Duplicate Record Sets matched.</description>
    <inlineHelpText>Number of Duplicate Record Sets matched.</inlineHelpText>
    <label>Number of Matched RecordSets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>