force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__NumMergedRecords__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__NumMergedRecords__c</fullName>
    <description>Number of Duplicate Records merged.</description>
    <inlineHelpText>Number of Duplicate Records merged.</inlineHelpText>
    <label>Number of Merged Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>