force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__NumMergedRecordSets__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__NumMergedRecordSets__c</fullName>
    <description>Number of Duplicate Record Sets merged.</description>
    <inlineHelpText>Number of Duplicate Record Sets merged.</inlineHelpText>
    <label>Number of Merged Duplicate Record Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>