force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SObjectType__c</fullName>
    <description>SObjectType for which DuplicateRecordSets will be merged.</description>
    <inlineHelpText>SObjectType for which DuplicateRecordSets will be merged.</inlineHelpText>
    <label>SObject Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>