force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__StartDateTime__c</fullName>
    <description>Processing start time of the Merge Job.</description>
    <inlineHelpText>Processing start time of the Merge Job.</inlineHelpText>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>