force-app/main/default/objects/onemergefree__MergeJob__c/fields/onemergefree__StatusReason__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__StatusReason__c</fullName>
    <description>Reason for a Merge Job to be set to a specific Status.</description>
    <inlineHelpText>Reason for a Merge Job to be set to a specific Status.</inlineHelpText>
    <label>Status Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>