force-app/main/default/objects/onemergefree__MergeJob__c/listViews/onemergefree__All.listView-meta.xml
<ListView>
    <fullName>onemergefree__All</fullName>
    <columns>NAME</columns>
    <columns>onemergefree__SObjectType__c</columns>
    <columns>onemergefree__JobType__c</columns>
    <columns>onemergefree__MergeJobStatus__c</columns>
    <columns>onemergefree__StartDateTime__c</columns>
    <columns>onemergefree__EndDateTime__c</columns>
    <columns>onemergefree__NumMergedRecordSets__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>